Update gitignore and README.md, add new functionality for downloading station data, and make minor changes to scripts.

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ __cache*
 /update-database-daily/last_update_time.txt
 update-database-daily/last_update_time.txt
 update-database-daily/last_update_time.txt
+Readme.pdf
+*.csv
